--- a/package.json
+++ b/package.json
@@ -39,12 +39,18 @@
     "debug": "~2.1.0",
     "good": "^5.1.1",
     "good-console": "^4.1.0",
-    "hapi": "~8.0.0",
-    "hapi-swagger": "^0.6.1",
+    "hapi": "~8.1.0",
+    "hapi-agenda": "^0.5.0",
+    "hapi-auth-bearer-token": "^3.1.0",
+    "hapi-auth-jwt": "^2.0.0",
+    "hapi-swagger": "^0.6.2",
     "hoek": "^2.11.0",
     "joi": "^5.0.2",
+    "jsonwebtoken": "^3.2.2",
     "lout": "^6.0.1",
     "mongoose": "^3.8.21",
+    "mongoose-cache": "^0.1.2",
+    "mongoose-timestamp": "^0.4.0",
     "nedb": "^1.1.1",
     "require-directory": "^2.0.0",
     "underscore": "~1.7.0"
